force-app/main/default/objects/DeadLetterQueue__c/DeadLetterQueue__c.object-meta.xml
<CustomObject>
    <description>Dead Letter Queue</description>
    <label>Dead Letter Queue</label>
    <nameField>
        <displayFormat>DLQ-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Dead Letter Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dead Letter Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>