force-app/main/default/objects/DeadLetterQueue__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <displayFormat>SQ-{0000}</displayFormat>
    <label>Sequence Number</label>
    <type>AutoNumber</type>
</CustomField>